[package]
name = "nannou-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
nannou_conrod = "0.18"
nalgebra = { version = "0.32", features = ["convert-glam017"] }
ode_solvers = "0.4"

[profile.release]
incremental = true
